# mMass_modernisation

./: .gitignore  AGENT_task-16-implementation-plan.md  AGENT_task-17-implementation-plan.md  README.md  environment_legacy.yml  environment_modern.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml
gui/: config.py  dlg_clipboard_editor.py  dlg_compounds_editor.py  dlg_enzymes_editor.py  dlg_error.py  dlg_mascot_editor.py  dlg_modifications_editor.py  dlg_monomers_editor.py  dlg_notation.py  dlg_preferences.py  dlg_presets_editor.py  dlg_references_editor.py  dlg_select_scans.py  dlg_select_sequences.py  doc.py  images.py  images_lib_mac.py  images_lib_msw.py  libs.py  main_frame.py  mwx.py  panel_about.py  panel_calibration.py  panel_compare_peaklists.py  panel_compounds_search.py  panel_document_export.py  panel_document_info.py  panel_documents.py  panel_envelope_fit.py  panel_mascot.py  panel_mass_calculator.py  panel_mass_defect_plot.py  panel_mass_filter.py  panel_mass_to_formula.py  panel_match.py  panel_monomer_library.py  panel_peak_differences.py  panel_peaklist.py  panel_periodic_table.py  panel_processing.py  (+5 more)
mspy/: __init__.py  blocks.py  calculations.py  mod_basics.py  mod_envfit.py  mod_formulator.py  mod_mascot.py  mod_peakpicking.py  mod_utils.py  obj_compound.py  obj_peak.py  obj_peaklist.py  obj_sequence.py  parser_fasta.py  parser_mgf.py  parser_mzml.py  parser_mzxml.py  parser_xy.py  plot.py  plot_canvas.py  plot_objects.py
src/mmass/: mmass.py
src/mmass/gui/: __init__.py  config.py  dlg_clipboard_editor.py  dlg_compounds_editor.py  dlg_enzymes_editor.py  dlg_error.py  dlg_mascot_editor.py  dlg_modifications_editor.py  dlg_monomers_editor.py  dlg_notation.py  dlg_preferences.py  dlg_presets_editor.py  dlg_references_editor.py  dlg_select_scans.py  dlg_select_sequences.py  doc.py  ids.py  images.py  images_lib_gtk.py  images_lib_mac.py  images_lib_msw.py  libs.py  main_frame.py  mwx.py  panel_about.py  panel_calibration.py  panel_compare_peaklists.py  panel_compounds_search.py  panel_document_export.py  panel_document_info.py  panel_documents.py  panel_envelope_fit.py  panel_mascot.py  panel_mass_calculator.py  panel_mass_defect_plot.py  panel_mass_filter.py  panel_mass_to_formula.py  panel_match.py  panel_monomer_library.py  panel_peak_differences.py  (+8 more)
src/mmass/mspy/: __init__.py  blocks.py  calculations.py  mod_basics.py  mod_calibration.py  mod_envfit.py  mod_formulator.py  mod_mascot.py  mod_pattern.py  mod_peakpicking.py  mod_proteo.py  mod_signal.py  mod_stopper.py  mod_utils.py  obj_compound.py  obj_peak.py  obj_peaklist.py  obj_scan.py  obj_sequence.py  parser_fasta.py  parser_mgf.py  parser_mzdata.py  parser_mzml.py  parser_mzxml.py  (+4 more)
tests/gui/: conftest.py  test_config.py  test_dlg_clipboard_editor.py  test_dlg_compounds_editor.py  test_dlg_enzymes_editor.py  test_dlg_error.py  test_dlg_mascot_editor.py  test_dlg_modifications_editor.py  test_dlg_monomers_editor.py  test_dlg_notation.py  test_dlg_preferences.py  test_dlg_presets_editor.py  test_dlg_references_editor.py  test_dlg_select_scans.py  test_dlg_select_sequences.py  test_doc.py  test_env_init.py  test_ids.py  test_images.py  test_libs.py  test_mwx.py  test_panel_about.py  test_panel_calibration.py  test_panel_compare_peaklists.py  test_panel_compounds_search.py  test_panel_document_export.py  test_panel_document_info.py  test_panel_documents.py  test_panel_envelope_fit.py  test_panel_mascot.py  test_panel_mass_calculator.py  test_panel_mass_defect_plot.py  test_panel_mass_filter.py  test_panel_mass_to_formula.py  test_panel_match.py  test_panel_monomer_library.py  test_panel_peak_differences.py  test_panel_peaklist.py  test_panel_periodic_table.py  test_panel_processing.py  (+5 more)
tests/mspy/: test_blocks.py  test_calculations.py  test_mod_basics.py  test_mod_calibration.py  test_mod_envfit.py  test_mod_formulator.py  test_mod_mascot.py  test_mod_pattern.py  test_mod_peakpicking.py  test_mod_proteo.py  test_mod_signal.py  test_mod_stopper.py  test_mod_utils.py  test_obj_compound.py  test_obj_peak.py  test_obj_peaklist.py  test_obj_scan.py  test_obj_sequence.py  test_parser_fasta.py  test_parser_mgf.py  test_parser_mzdata.py  test_parser_mzml.py  test_parser_mzxml.py  test_parser_xy.py  test_plot_canvas.py  test_plot_objects.py
(+78 files in other folders)
