[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmass"
version = "5.5.0"
description = "mMass - Open Source Mass Spectrometry Tool"
authors = [{name = "Martin Strohalm"}]
license = {text = "GNU General Public License"}
urls = {Homepage = "http://www.mmass.org/"}
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "wxpython>=4.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"mmass" = ["configs/*", "User Guide.pdf"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # Clean signatures
    "SIM",  # Simplified logic
    "TCH",  # Optimized type imports
    "PTH",  # Modern path handling (i.e., use pathlib instead of os.path)
    "RUF",  # Ruff-specific power rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (we'll address this gradually)
    "B904",  # raise from None (legacy code compatibility)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov-report=term-missing",
    "--cov-branch",
    "--timeout=30",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
