[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmass"
version = "5.5.0"
description = "mMass - Open Source Mass Spectrometry Tool"
authors = [{name = "Martin Strohalm"}]
license = {text = "GNU General Public License"}
urls = {Homepage = "http://www.mmass.org/"}
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "wxpython>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "hypothesis>=6.152.5",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=3.15.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.13",
    "mypy>=2.0.0",
    "types-setuptools>=82.0.0.20260508",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"mmass" = ["configs/*", "User Guide.pdf"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "D",    # pydocstyle
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "ANN",  # flake8-annotations
    "UP",   # pyupgrade
    "ARG",  # Clean signatures
    "SIM",  # Simplified logic
    "TCH",  # Optimized type imports
    "PTH",  # Modern path handling (i.e., use pathlib instead of os.path)
    "RUF",  # Ruff-specific power rules
    "N",    # pep8-naming
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Allow 'assert' in tests
    "ARG",    # Unused argument (common for pytest fixtures)
    "ANN",    # Missing type hints
    "E501",   # Long lines
]
"**/__init__.py" = [
    "F401"  # Allow unused imports in __init__.py (common for API exports)
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Options: "google", "numpy", "pep257"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov-report=term-missing",
    "--cov-branch",
    "--timeout=30",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.13"
strict = true
